<resources>
    <string name="app_name">New Order</string>
    <string name="location">Location</string>
    <string name="list_products">List Products</string>
    <string name="display_product_name">Display Product</string>
    <string name="product_name">Product</string>
    <string name="product_id">Product Id</string>

    <string name="add_product">Add Product</string>
    <string name="update_product">Update Product</string>
    <string name="display_product">Display Product</string>
    <string name="display_update_product">Display And Update Products</string>
    <string name="title_product">Enter Product Details to Add</string>
    <string name="customer_name">Customer Name</string>
    <string name="unit_type">Type</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="product_details">Product Details</string>
    <string name="manufacturer_name">Manufacturer</string>
    <string name="mobile">Mobile</string>
    <string name="total">Sales Total</string>
    <string name="no_of_items">Total Items: </string>
    <string name="retail">Price</string>
    <string name="mrp">MRP</string>
    <string name="cost">Cost</string>

    <string name="err_product_req">Product Name is required.</string>
    <string name="err_product_id_req">Product Id is required.</string>
    <string name="err_mfr_req">Manufacturer is required.</string>
    <string name="err_location_req">Location is required.</string>

    <string name="add_sales_person">Add Sales Person</string>
    <string name="display_sales_person">Display Sales Person</string>
    <string name="sales_persons_list">Sales Persons List</string>
    <string name="sales_persons">Sales Persons</string>
    <string name="sales_person_id">Sales Person Id</string>
    <string name="select_sales_person_id">Select Your Id</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <string name="rs">Rs.</string>
    <string name="contact">Contact</string>

    <string name="sync">Sync</string>

    <string name="config">Config</string>

    <string name="cancel">Cancel</string>
    <string name="update">Update</string>

    <string name="product_name_err">Product name can not be empty!</string>
    <string name="sales_person_Id_err">Sales Person Id can not be empty!</string>
    <string name="sales">Sales</string>
    <string name="sales_orders_list">Sales Orders List</string>
    <string name="display_sales_orders">Display Sales Orders</string>
    <string name="display_today_sales_orders">Display Today\'s Sales Orders</string>
    <string name="booki">BookI</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="read_it_together">Read it together</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget Password.?</string>

    <string name="no_records">No Records</string>
    <string name="network_offline">Hey, it looks like you are offline!</string>


    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="finish">Submit order</string>
    <string name="review">Review</string>

    <string name="label_your_name">Name</string>
    <string name="label_your_email">Email</string>
    <string name="hint_your_name">e.g. Larry</string>
    <string name="hint_your_email">Optional</string>

    <string name="submit_confirm_message">Place the order with the deli? You will receive an email
        confirmation.</string>
    <string name="submit_confirm_button">Place order</string>

    <string name="turn_on">Turn On and Off Flashlight Programmatically</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>



    <string name="updateproduct_pref" translatable="false">com.mobile.order.DisplayAndUpdateProductActivity</string>
</resources>
