<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/toolbar"
    android:fillViewport="true">
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/product_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="3dp"
    android:layout_marginEnd="@dimen/card_item_padding"
    android:layout_marginStart="@dimen/card_item_padding"
    card_view:cardCornerRadius="@dimen/card_item_padding"
    card_view:cardElevation="@dimen/card_item_padding">



                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:id="@+id/LinearLayout_item"
                android:orientation="horizontal">
                <TextView

                    android:id="@+id/product_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sales_person_id"
                    android:textSize="@dimen/title_text"
                    android:inputType="textNoSuggestions"/>
                    <TextView

                        android:id="@+id/mrp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight=".5"
                        android:text="@string/mrp"
                        android:textSize="@dimen/title_text"
                        android:inputType="textNoSuggestions"/>
                <TextView

                    android:id="@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight=".5"
                    android:text="@string/unit_type"
                    android:textSize="@dimen/title_text"
                    android:inputType="textNoSuggestions"/>
                <TextView

                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight=".5"
                    android:text="@string/quantity"
                    android:textSize="@dimen/title_text"
                    android:inputType="textNoSuggestions"/>
                    <TextView

                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight=".5"
                        android:text="@string/price"
                        android:textSize="@dimen/title_text"
                        android:inputType="textNoSuggestions"/>
                    <ImageView
                        android:id="@+id/delete"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/close"/>
            </LinearLayout>
</android.support.v7.widget.CardView >
</ScrollView>