<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:theme="@style/Theme.AppCompat.Light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="@style/AppTheme"
            app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
            app:title="@string/add_sales_person"
            app:titleMarginStart="24dp"
            app:titleTextColor="@android:color/white" />


    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/tvSalesId"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sales_person_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" />

    <EditText
        android:id="@+id/sales_person_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Sales Person Employee ID"
        app:layout_constraintStart_toEndOf="@id/tvSalesId"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvSalesId"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="8dp"
        android:maxLength="10"
        android:inputType="number"/>

    <TextView
        android:id="@+id/sales_id_error_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:padding="3dp"
        android:text="@string/err_product_req"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSalesId" />

    <TextView
        android:id="@+id/tv_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/first_name"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sales_id_error_msg" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="@string/first_name"
        android:maxLength="30"
        app:layout_constraintStart_toEndOf="@id/tv_first_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_first_name"
        app:layout_constraintEnd_toEndOf="parent" />
    <TextView
        android:id="@+id/tv_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/last_name"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="@string/last_name"
        android:maxLength="30"
        app:layout_constraintStart_toEndOf="@id/tv_last_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_last_name"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/add_sales_person"
        android:layout_width="178dp"
        android:layout_height="43dp"

        android:layout_marginStart="8dp"
        android:background="@drawable/ripple_button"
        android:onClick="sendProduct"
        android:text="@string/add_sales_person"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_last_name" />

    <Button
        android:id="@+id/cancel_product"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:onClick="cancel"
        android:text="@string/cancel"
        android:textColor="@color/greySecondary"
        android:theme="@style/ThemeOverlay.Button"
        app:layout_constraintStart_toEndOf="@+id/add_sales_person"
        app:layout_constraintBaseline_toBaselineOf="@+id/add_sales_person"/>
</android.support.constraint.ConstraintLayout>