<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <TextView
            android:id="@+id/lblSyncProduct"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/product_name"
            android:layout_weight=".5"
            android:textSize="@dimen/title_text" ></TextView>

        <Button
            android:id="@+id/sync_product"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/sync"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:background="@drawable/round_corner_button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <TextView
            android:id="@+id/lblSyncSalesPersons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/sales_persons"
            android:layout_weight=".5"
            android:textSize="@dimen/title_text" ></TextView>

        <Button
            android:id="@+id/sync_sales_persons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/sync"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:background="@drawable/round_corner_button"/>
    </LinearLayout>
</LinearLayout>
</android.support.constraint.ConstraintLayout>