<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintTop_toTopOf="parent">


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:theme="@style/AppTheme"
                app:title="@string/add_product"
                app:titleMarginStart="24dp"
                app:titleTextColor="@android:color/white" />


        </android.support.design.widget.AppBarLayout>
        <TextView
            android:id="@+id/product_doc_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="Product Name"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
           android:visibility="gone" />
        <TextView
            android:id="@+id/lbl_product_name"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/product_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" />

        <EditText
            android:id="@+id/product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="Product Name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lbl_product_name"
            app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" />
        <TextView
            android:id="@+id/productname_error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Error"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_product_name" />

        <TextView
            android:id="@+id/lbl_product_id"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/product_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productname_error_msg" />

        <EditText
            android:id="@+id/product_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="Product Id"
            android:inputType="number"
            android:maxLength="10"
            app:layout_constraintBaseline_toBaselineOf="@+id/lbl_product_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lbl_product_id" />

        <TextView
            android:id="@+id/lbl_retail_price"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/retail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_product_id" />
        <Spinner

            android:id="@+id/retail_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/location"
            android:entries="@array/unit_type"
            android:textSize="@dimen/title_text"

            app:layout_constraintBaseline_toBaselineOf="@+id/lbl_retail_price"
            app:layout_constraintStart_toEndOf="@+id/lbl_retail_price" />


        <EditText
            android:id="@+id/retail_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="MRP"
            app:layout_constraintBaseline_toBaselineOf="@+id/retail_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/retail_type" />

        <Button
            android:id="@+id/add_product"
            android:layout_width="178dp"
            android:layout_height="43dp"

            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/ripple_button"
            android:onClick="sendProduct"
            android:text="@string/add_product"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_retail_price" />

        <Button
            android:id="@+id/cancel_product"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:textColor="@color/greySecondary"
            android:theme="@style/ThemeOverlay.Button"
            app:layout_constraintStart_toEndOf="@+id/add_product"
            app:layout_constraintBaseline_toBaselineOf="@+id/add_product"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>