<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/toolbar"
    android:fillViewport="true">
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="3dp"
    android:layout_marginEnd="@dimen/card_item_padding"
    android:layout_marginStart="@dimen/card_item_padding"
    card_view:cardCornerRadius="@dimen/card_item_padding"
    card_view:cardElevation="@dimen/card_item_padding">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"> <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText

                    android:id="@+id/sales_person_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sales_person_id"
                    android:maxLength="10"
                    android:textSize="@dimen/title_text"
                    android:inputType="textNoSuggestions"/>
                <EditText

                    android:id="@+id/first_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight=".5"
                    android:text="@string/first_name"
                    android:maxLength="30"
                    android:textSize="@dimen/title_text"
                    android:inputType="textNoSuggestions"/>
                <EditText

                    android:id="@+id/last_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight=".5"
                    android:text="@string/last_name"
                    android:maxLength="30"
                    android:textSize="@dimen/title_text"
                    android:inputType="textNoSuggestions"/>
                <ImageView
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end|center_vertical"
                    android:foregroundGravity="right"
                    android:src="@drawable/close"/>
            </LinearLayout>
                <EditText
                    android:id="@+id/sales_person_doc_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:visibility="gone"
                    android:textSize="@dimen/title_text"/>
                <TextView

                    android:id="@+id/sales_person_id_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sales_person_Id_err"
                    android:textSize="@dimen/title_text"
                    android:visibility="gone"
                    tools:textColor="@color/red" />

            </LinearLayout>

        </LinearLayout>
</android.support.v7.widget.CardView >
</ScrollView>